--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,16 @@
 /CMakeLists.txt
 /build.bat
 
+/sfml-audio-2.dll
+/sfml-audio-d-2.dll
 /sfml-audio-3.dll
+/sfml-graphics-2.dll
+/sfml-graphics-d-2.dll
 /sfml-graphics-3.dll
+/sfml-system-2.dll
+/sfml-system-d-2.dll
 /sfml-system-3.dll
+/sfml-window-2.dll
+/sfml-window-d-2.dll
 /sfml-window-3.dll
 /game_beta.exe
