--- a/.gitignore
+++ b/.gitignore
@@ -4,23 +4,7 @@
 /CMakeLists.txt
 /build.bat
 
-/sfml-audio-2.dll
-/sfml-audio-d-2.dll
-/sfml-audio-3.dll
-/sfml-graphics-2.dll
-/sfml-graphics-d-2.dll
-/sfml-graphics-3.dll
-/sfml-system-2.dll
-/sfml-system-d-2.dll
-/sfml-system-3.dll
-/sfml-window-2.dll
-/sfml-window-d-2.dll
-/sfml-window-3.dll
 /game_beta.exe
-/openal32.dll
-
-game_beta
-game.o
-loading.o
-fonts.o
-main.o
+/game_beta
+/*.dll
+/*.o
